--- a/css/2015.css
+++ b/css/2015.css
@@ -112,7 +112,7 @@
 
 .ytp-chrome-bottom {
     bottom: 0;
-    transition: bottom .5s cubic-bezier(0.0,0.0,0.2,1) !important;
+    transition: all .5s cubic-bezier(0.0,0.0,0.2,1) !important;
 }
 
 .ytp-autohide:not(.ytp-watch-controls) .ytp-chrome-bottom, .ytp-chrome-bottom[aria-hidden=true] {
@@ -160,13 +160,13 @@
 }
 
 .ytp-bezel[aria-label="Pause"] {
-    background: url('https://raw.githubusercontent.com/ktg5/YT-HTML5-Player/main/img/big-pause.png');
+    background: url('https://raw.githubusercontent.com/ktg5/PlayerTube/main/img/big-pause.png');
     background-size: cover;
     border-radius: 0;
 }
 
 .ytp-bezel[aria-label="Play"] {
-    background: url('https://raw.githubusercontent.com/ktg5/YT-HTML5-Player/main/img/big-play.png');
+    background: url('https://raw.githubusercontent.com/ktg5/PlayerTube/main/img/big-play.png');
     background-size: cover;
     border-radius: 0;
 }
@@ -176,7 +176,7 @@
 /* SCRUBBER */
 
 .ytp-scrubber-button {
-	background: url(https://raw.githubusercontent.com/ktg5/YT-HTML5-Player/main/img/2015-scrubber.png) !important;
+	background: url(https://raw.githubusercontent.com/ktg5/PlayerTube/main/img/2015-scrubber.png) !important;
 	background-position: 0px 0px !important;
 	background-size: 18px !important;
 	height: 18px !important;
@@ -186,7 +186,7 @@
 }
 
 .ytp-scrubber-button:hover {
-	background: url(https://raw.githubusercontent.com/ktg5/YT-HTML5-Player/main/img/2015-scrubber-hover.png) !important;
+	background: url(https://raw.githubusercontent.com/ktg5/PlayerTube/main/img/2015-scrubber-hover.png) !important;
 	background-position: 0px 0px !important;
 	background-size: 18px !important;
 	height: 18px !important;
@@ -281,7 +281,7 @@
 /* PREV BUTTON */
 
 .ytp-button.ytp-prev-button {
-	background: url(https://raw.githubusercontent.com/ktg5/YT-HTML5-Player/main/img/2015-icons.png) no-repeat;
+	background: url(https://raw.githubusercontent.com/ktg5/PlayerTube/main/img/2015-icons.png) no-repeat;
 	background-position: 4px -1px;
 	background-size: 200px;
 }
@@ -289,7 +289,7 @@
 /* PLAY BUTTON */
 
 .ytp-button.ytp-play-button {
-	background: url(https://raw.githubusercontent.com/ktg5/YT-HTML5-Player/main/img/2015-icons.png) no-repeat;
+	background: url(https://raw.githubusercontent.com/ktg5/PlayerTube/main/img/2015-icons.png) no-repeat;
 	background-position: -50px -1330px;
 	background-size: 200px;
 	width: 55px !important;
@@ -302,7 +302,7 @@
 /* NEXT BUTTON */
 
 .ytp-button.ytp-next-button {
-	background: url(https://raw.githubusercontent.com/ktg5/YT-HTML5-Player/main/img/2015-icons.png) no-repeat;
+	background: url(https://raw.githubusercontent.com/ktg5/PlayerTube/main/img/2015-icons.png) no-repeat;
 	background-position: 4px -1216px;
 	background-size: 200px;
 	width: 45px !important;
@@ -311,7 +311,7 @@
 /* VOLUME BUTTON */
 
 .ytp-button.ytp-mute-button {
-	background: url(https://raw.githubusercontent.com/ktg5/YT-HTML5-Player/main/img/2015-icons.png) no-repeat;
+	background: url(https://raw.githubusercontent.com/ktg5/PlayerTube/main/img/2015-icons.png) no-repeat;
 	background-position: -113px -154.5px;
 	background-size: 200px;
 	width: 45px !important;
@@ -443,7 +443,7 @@
 /* SUBTITLES BUTTON */
 
 .ytp-subtitles-button.ytp-button {
-	background: url(https://raw.githubusercontent.com/ktg5/YT-HTML5-Player/main/img/2015-icons.png) no-repeat;
+	background: url(https://raw.githubusercontent.com/ktg5/PlayerTube/main/img/2015-icons.png) no-repeat;
 	background-position: -113px -998px;
 	background-size: 200px;
 	bottom: 5px;
@@ -464,7 +464,7 @@
 /* SETTINGS BUTTON */
 
 .ytp-button.ytp-settings-button {
-	background: url(https://raw.githubusercontent.com/ktg5/YT-HTML5-Player/main/img/2015-icons.png) no-repeat;
+	background: url(https://raw.githubusercontent.com/ktg5/PlayerTube/main/img/2015-icons.png) no-repeat;
 	background-position: -155px -522px;
 	background-size: 200px;
 	bottom: 5px;
@@ -488,7 +488,7 @@
 /* THEATER BUTTON */
 
 .ytp-button.ytp-size-button {
-	background: url(https://raw.githubusercontent.com/ktg5/YT-HTML5-Player/main/img/2015-icons.png) no-repeat;
+	background: url(https://raw.githubusercontent.com/ktg5/PlayerTube/main/img/2015-icons.png) no-repeat;
 	background-position: -156px -484px;
 	background-size: 200px;
 	bottom: 5px;
@@ -509,7 +509,7 @@
 /* WATCH ON YOUTUBE BUTTON (usually displayed on embed videos) */
 
 .ytp-button.ytp-youtube-button {
-	background: url(https://raw.githubusercontent.com/ktg5/YT-HTML5-Player/main/img/2015-icons.png) no-repeat;
+	background: url(https://raw.githubusercontent.com/ktg5/PlayerTube/main/img/2015-icons.png) no-repeat;
 	background-position: -120px -268px;
 	position: sticky !important;
 	width: 55px !important;
@@ -520,7 +520,7 @@
 /* FULLSCREEN BUTTON */
 
 .ytp-button.ytp-fullscreen-button {
-	background: url(https://raw.githubusercontent.com/ktg5/YT-HTML5-Player/main/img/2015-icons.png) no-repeat;
+	background: url(https://raw.githubusercontent.com/ktg5/PlayerTube/main/img/2015-icons.png) no-repeat;
 	background-position: -114px -523px;
 	background-size: 200px;
 	bottom: 5px;
@@ -533,7 +533,7 @@
 /* WATCH LATER (moved from chrome-top) */
 
 .ytp-button.ytp-watch-later-button {
-	background: url(https://raw.githubusercontent.com/ktg5/YT-HTML5-Player/main/img/2015-icons.png) no-repeat;
+	background: url(https://raw.githubusercontent.com/ktg5/PlayerTube/main/img/2015-icons.png) no-repeat;
 	background-position: -53px -1099px;
 	background-size: 200px;
 	display: inline-block;
@@ -587,7 +587,7 @@
 }
 
 .ytp-button.ytp-share-button {
-	background: url(https://raw.githubusercontent.com/ktg5/YT-HTML5-Player/main/img/2015-icons.png) no-repeat;
+	background: url(https://raw.githubusercontent.com/ktg5/PlayerTube/main/img/2015-icons.png) no-repeat;
 	background-position: 2px -524px;
 	transition: .5s !important;
 	background-size: 220px;
@@ -596,7 +596,7 @@
 }
 
 .ytp-button.ytp-cards-button {
-	background: url(https://raw.githubusercontent.com/ktg5/YT-HTML5-Player/main/img/2015-icons.png) no-repeat;
+	background: url(https://raw.githubusercontent.com/ktg5/PlayerTube/main/img/2015-icons.png) no-repeat;
 	background-position: 5px -512px;
 	transition: .5s !important;
 	background-size: 200px;
