--- a/css/2012.css
+++ b/css/2012.css
@@ -27,6 +27,8 @@
     left: 0 !important;
 }
 
+/* PROGRESS BAR */
+
 .ytp-chrome-bottom .ytp-progress-bar-container {
 	bottom: 34px !important;
 }
