--- a/css/2006.css
+++ b/css/2006.css
@@ -1,12 +1,12 @@
 /* Player Base */
 
 :root {
-	--background: linear-gradient(#e2e2e2, #a9a9a9);
-	--main-colour: linear-gradient(#ffdbdb, #ff0202);
+	--pt-background: linear-gradient(#e2e2e2, #a9a9a9);
+	--pt-main-colour: linear-gradient(#ffdbdb, #ff0202);
 }
 
 .ytp-chrome-controls {
-    background: var(--background);
+    background: var(--pt-background);
     height: 32px !important;
 }
 
@@ -66,7 +66,7 @@
 }
 
 .ytp-play-progress.ytp-swatch-background-color, .ytp-hover-progress.ytp-hover-progress-light {
-	background: var(--main-colour);
+	background: var(--pt-main-colour);
     border-top: solid 1px #00000045;
     border-bottom: solid 1px #00000045;
     height: calc(100% - 2px);
