--- a/css/2010-dark.css
+++ b/css/2010-dark.css
@@ -1,17 +1,17 @@
 /* PLAYER BASE */
 
 :root {
-	--background: linear-gradient(#373c3e, #181a1b);
-    --background-top: #323639;
-    --main-colour: rgb(155, 0, 0.8);
-    --alt-colour: rgba(155, 0, 0, 0.5);
-    --volume-slider: rgb(155, 0, 0);
-    --progress-bar-bg: rgba(24, 26, 27, 0.75);
-    --progress-bar-outline: #5a5a5a63;
-    --progress-text: #c2c2c2;
-	--alt-progress-text: #c2c2c2;
-    --button-gradient: linear-gradient(rgb(24, 26, 27), rgb(60, 65, 67));
-    --settings-bg: rgb(35, 35, 35);
+	--pt-background: linear-gradient(#373c3e, #181a1b);
+    --pt-background-top: #323639;
+    --pt-main-colour: rgb(155, 0, 0.8);
+    --pt-alt-colour: rgba(155, 0, 0, 0.5);
+    --pt-volume-slider: rgb(155, 0, 0);
+    --pt-progress-bar-bg: rgba(24, 26, 27, 0.75);
+    --pt-progress-bar-outline: #5a5a5a63;
+    --pt-progress-text: #c2c2c2;
+	--pt-alt-progress-text: #c2c2c2;
+    --pt-button-gradient: linear-gradient(rgb(24, 26, 27), rgb(60, 65, 67));
+    --pt-settings-bg: rgb(35, 35, 35);
 }
 
 /* ################################# */
@@ -64,7 +64,7 @@
     width: 40px !important;
     bottom: 9px;
     border: solid 1px rgb(60, 65, 68);
-    background: var(--button-gradient) !important;
+    background: var(--pt-button-gradient) !important;
 }
 
 /* ################################# */
