--- a/css/2010.css
+++ b/css/2010.css
@@ -16,6 +16,34 @@
     left: 0 !important;
 }
 
+/* LOADING / SPINNER / BUFFER thingy whatever */
+
+.html5-video-player .ytp-spinner {
+    background: url('https://raw.githubusercontent.com/ktg5/PlayerTube/main/img/loading.gif');
+}
+
+.html5-video-player .ytp-spinner .ytp-spinner-container {
+    display: none;
+}
+
+/* ################################# */
+
+/* "BEZEL" ICONS */
+
+.ytp-bezel[aria-label="Pause"] {
+    background: url('https://raw.githubusercontent.com/ktg5/PlayerTube/main/img/big-pause.png');
+    background-size: cover;
+    border-radius: 0;
+}
+
+.ytp-bezel[aria-label="Play"] {
+    background: url('https://raw.githubusercontent.com/ktg5/PlayerTube/main/img/big-play.png');
+    background-size: cover;
+    border-radius: 0;
+}
+
+/* ################################# */
+
 /* PROGRESS BAR */
 
 .ytp-chrome-bottom .ytp-progress-bar-container {
@@ -620,6 +648,10 @@
 /* ################################# */
 
 /* EMBEDDED VIDEO */
+
+.ytp-embed .ytp-large-play-button {
+	background: url('https://raw.githubusercontent.com/ktg5/PlayerTube/main/img/embed-play.png')
+}
 
 .ytp-embed .ytp-title-channel {
 	display: none;
