--- a/css/2012.css
+++ b/css/2012.css
@@ -28,6 +28,16 @@
     left: 0 !important;
 }
 
+/* LOADING / SPINNER / BUFFER thingy whatever */
+
+.html5-video-player .ytp-spinner {
+    background: url('https://raw.githubusercontent.com/ktg5/PlayerTube/main/img/loading.gif');
+}
+
+.html5-video-player .ytp-spinner .ytp-spinner-container {
+    display: none;
+}
+
 /* PROGRESS BAR */
 
 .ytp-chrome-bottom .ytp-progress-bar-container {
@@ -751,6 +761,10 @@
 /* ################################# */
 
 /* EMBEDDED VIDEO */
+
+.ytp-embed .ytp-large-play-button {
+	background: url('https://raw.githubusercontent.com/ktg5/PlayerTube/main/img/embed-play.png')
+}
 
 .ytp-embed .ytp-title-channel {
 	display: none;
