--- a/css/2010.css
+++ b/css/2010.css
@@ -16,16 +16,6 @@
     left: 0 !important;
 }
 
-/* LOADING / SPINNER / BUFFER thingy whatever */
-
-.html5-video-player .ytp-spinner {
-    background: url('https://raw.githubusercontent.com/ktg5/PlayerTube/main/img/loading.gif');
-}
-
-.html5-video-player .ytp-spinner .ytp-spinner-container {
-    display: none;
-}
-
 /* ################################# */
 
 /* "BEZEL" ICONS */
@@ -650,7 +640,8 @@
 /* EMBEDDED VIDEO */
 
 .ytp-embed .ytp-large-play-button {
-	background: url('https://raw.githubusercontent.com/ktg5/PlayerTube/main/img/embed-play.png')
+	background: url('https://raw.githubusercontent.com/ktg5/PlayerTube/main/img/embed-play.png') center no-repeat;
+	background-size: contain;
 }
 
 .ytp-embed .ytp-title-channel {
