--- a/css/3rd-party-style.css
+++ b/css/3rd-party-style.css
@@ -68,6 +68,6 @@ html[pseudo-static] #movie_player[aria-label="YouTube Video Player"] .ytp-chrome
 }
 
 /* Truffle */
-body[data-mogul-theater-mode] .html5-video-player .ytp-chrome-bottom {
+body[data-mogul-theater-mode] ytd-watch-flexy[theater]:has(ytd-live-chat-frame:not([collapsed])) .ytd-player .ytp-chrome-bottom {
     width: 100% !important;
-}
+} 
